syntax = "proto3";
package relation;
option go_package = "./proto";

service relation {
    rpc RelationAction(RelationActionRequest) returns (ActionResponse);
    rpc GetFollowList(IdRequest) returns (UserIdListResponse);
    rpc GetFollowerList(IdRequest) returns (UserIdListResponse);
}
message IdRequest{
  int64 id = 1 ;
}

message UserIdListResponse{
  repeated int64 userIdList = 1;
}

message RelationActionRequest{
  int64 id = 1;
  int64 followId = 2;
  int32 actionType = 3;
}

message ActionResponse{
  bool success = 1;
}